Using remote_theme instead theme for Clean Blog

--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,15 @@ github_username:  giapdong
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-clean-blog
+# theme: jekyll-theme-clean-blog
+remote_theme: StartBootstrap/startbootstrap-clean-blog-jekyll
 paginate:           5
 paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
