--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Dino Live
 email: giapdong.svbk62@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Làm một thứ gì đó mà nó cũng k biết ._.
+  Chạm là Chiến ._.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
@@ -37,11 +37,7 @@ plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - Gemfile
+  - jekyll*.sh
+  - jekyll.installlog
