--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ email: giapdong.svbk62@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Chạm là Chiến ._.
 baseurl: "" # the subpath of your site, e.g. /blog
+mediaurl: "https://media.githubusercontent.com/media/giapdong/giapdong.github.io/main"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  giapdong
