--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ email: giapdong.svbk62@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Survival Man ._.
 baseurl: "" # the subpath of your site, e.g. /blog
-mediaurl: "http://media.giapdong.live"
+# mediaurl: "http://media.giapdong.live"
+mediaurl: "https://s3.us-east-2.amazonaws.com/media.giapdong.live"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  giapdong
