Cleanup and make deploy script

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ plugins:
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
+  - deploy.sh
+  - img
   - Gemfile
   - jekyll*.sh
   - jekyll.installlog
