Ignore scripts folder when build production

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ plugins:
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
+  - scripts
   - deploy.sh
   - img
   - Gemfile
